--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 atomicwrites==1.3.0
-attrs==19.1.0
-colorama==0.4.1
+attrs==19.2.0
 Django==2.2.5
+entrypoints==0.3
+flake8==3.7.8
+gunicorn==19.9.0
 importlib-metadata==0.23
+mccabe==0.6.1
 more-itertools==7.2.0
 packaging==19.2
+pkg-resources==0.0.0
 pluggy==0.13.0
 psycopg2==2.8.3
 py==1.8.0
+pycodestyle==2.5.0
+pyflakes==2.1.1
 pyparsing==2.4.2
 pytest==5.2.0
 pytz==2019.2
