--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,33 @@
 atomicwrites==1.3.0
 attrs==19.2.0
+boto3==1.12.24
+botocore==1.15.24
 Django==2.2.5
+django-cors-headers==3.2.1
+djangorestframework==3.11.0
+djangorestframework-jwt==1.11.0
+docutils==0.15.2
 entrypoints==0.3
 flake8==3.7.8
 gunicorn==19.9.0
 importlib-metadata==0.23
+jmespath==0.9.5
 mccabe==0.6.1
 more-itertools==7.2.0
 packaging==19.2
-pkg-resources==0.0.0
 pluggy==0.13.0
-psycopg2==2.8.3
+psycopg2-binary==2.8.4
 py==1.8.0
 pycodestyle==2.5.0
 pyflakes==2.1.1
+PyJWT==1.7.1
 pyparsing==2.4.2
 pytest==5.2.0
+python-dateutil==2.8.1
 pytz==2019.2
+s3transfer==0.3.3
 six==1.12.0
 sqlparse==0.3.0
+urllib3==1.25.8
 wcwidth==0.1.7
 zipp==0.6.0
